# mdf4-converters

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.md  vcpkg.json
GenericFiles/: CMakeLists.txt  heatshrink.cmake
GenericFiles/Include/: AESGCMFile.h  GenericFile.h  HeatshrinkFile.h
GenericFiles/Source/: AESGCMFile.cpp  GenericFile.cpp  HeatshrinkFile.cpp  ProjectInformation.h.in
Progress/: CMakeLists.txt  ProgressInterface.cpp  ProgressInterface.h  README.md
Python/: CMakeLists.txt  PyCXX.cmake
Python/Distribution_Iterator/: .gitignore  LICENSE  README.md  setup.py
Python/Distribution_Iterator/examples/: example_dataframe.py  example_first_timestamp.py  example_iterator.py
Python/Distribution_Iterator/mdf_iter/: FileInterface.py  IFileInterface.py  __init__.py  mdf_iter.pyi
Python/Source/: CallbackBuffer.cpp  CallbackBuffer.h  Export.cpp  MdfCANIteratorWrapper.cpp  MdfCANIteratorWrapper.h  MdfCANRecordWrapper.cpp  MdfCANRecordWrapper.h  MdfFileWrapper.cpp  MdfFileWrapper.h  Module.cpp  Module.h  PythonLogger.cpp  PythonLogger.h  TypeSupport.cpp  TypeSupport.h
Python/Source/IteratorWrappers/: MDF_CAN_DataFrameIteratorWrapper.cpp  MDF_CAN_DataFrameIteratorWrapper.h  MDF_CAN_ErrorFrameIteratorWrapper.cpp  MDF_CAN_ErrorFrameIteratorWrapper.h  MDF_CAN_RemoteFrameIteratorWrapper.cpp  MDF_CAN_RemoteFrameIteratorWrapper.h  MDF_LIN_ChecksumErrorIteratorWrapper.cpp  MDF_LIN_ChecksumErrorIteratorWrapper.h  MDF_LIN_FrameIteratorWrapper.cpp  MDF_LIN_FrameIteratorWrapper.h  MDF_LIN_ReceiveErrorIteratorWrapper.cpp  MDF_LIN_ReceiveErrorIteratorWrapper.h  MDF_LIN_SyncErrorIteratorWrapper.cpp  MDF_LIN_SyncErrorIteratorWrapper.h  MDF_LIN_TransmissionErrorIteratorWrapper.cpp  MDF_LIN_TransmissionErrorIteratorWrapper.h
Python/Source/RecordWrappers/: MDF_CAN_DataFrameWrapper.cpp  MDF_CAN_DataFrameWrapper.h  MDF_CAN_ErrorFrameWrapper.cpp  MDF_CAN_ErrorFrameWrapper.h  MDF_CAN_RemoteFrameWrapper.cpp  MDF_CAN_RemoteFrameWrapper.h  MDF_LIN_ChecksumErrorWrapper.cpp  MDF_LIN_ChecksumErrorWrapper.h  MDF_LIN_FrameWrapper.cpp  MDF_LIN_FrameWrapper.h  MDF_LIN_ReceiveErrorWrapper.cpp  MDF_LIN_ReceiveErrorWrapper.h  MDF_LIN_SyncErrorWrapper.cpp  MDF_LIN_SyncErrorWrapper.h  MDF_LIN_TransmissionErrorWrapper.cpp  MDF_LIN_TransmissionErrorWrapper.h
Tools/: CMakeLists.txt  LICENSE.md  README.md  exit_codes.md
Tools/ASC/: ASC_CAN_Exporter.cpp  ASC_CAN_Exporter.h  ASC_Exporter.cpp  ASC_Exporter.h  ASC_LIN_Exporter.cpp  ASC_LIN_Exporter.h  CHANGES.md  CMakeLists.txt  ProjectInformation.h.in  main.cpp
Tools/ASC/Source/: ASC_CAN_Exporter.cpp  ASC_CAN_Exporter.h  ASC_Common.h  ASC_Exporter.cpp  ASC_Exporter.h  ASC_LIN_Exporter.cpp  ASC_LIN_Exporter.h  ProjectInformation.h.in  Version.h.in  main.cpp
Tools/CLX000/: CLX000_CAN_Exporter.cpp  CLX000_CAN_Exporter.h  CLX000_Configuration.h  CLX000_Exporter.cpp  CLX000_Exporter.h  CLX000_LIN_Exporter.cpp  CLX000_LIN_Exporter.h  CMakeLists.txt  ProjectInformation.h.in  README.md  config.ini  main.cpp
Tools/CLX000/Source/: CLX000_BaseExporter.cpp  CLX000_BaseExporter.h  CLX000_CAN_Exporter.cpp  CLX000_CAN_Exporter.h  CLX000_Configuration.h  CLX000_Exporter.cpp  CLX000_Exporter.h  CLX000_LIN_Exporter.cpp  CLX000_LIN_Exporter.h  ProjectInformation.h.in  Version.h.in  main.cpp
Tools/CMake/: Package.cmake
Tools/CSV/: CMakeLists.txt  CSV_CAN_Exporter.cpp  CSV_CAN_Exporter.h  CSV_Exporter.cpp  CSV_Exporter.h  CSV_LIN_Exporter.cpp  CSV_LIN_Exporter.h  ProjectInformation.h.in  main.cpp
Tools/CSV/Source/: CSV_CAN_Exporter.cpp  CSV_CAN_Exporter.h  CSV_Common.h  CSV_Exporter.cpp  CSV_Exporter.h  CSV_LIN_Exporter.cpp  CSV_LIN_Exporter.h  ProjectInformation.h.in  Version.h.in  main.cpp
Tools/MDF/: CMakeLists.txt
Tools/MDF/Source/: MDFTool.cpp  MDFTool.h  ProjectInformation.h.in  Version.h.in  main.cpp
Tools/PCAP/: CMakeLists.txt  PCAP_CAN_Exporter.cpp  PCAP_CAN_Exporter.h  PCAP_Exporter.cpp  PCAP_Exporter.h  ProjectInformation.h.in  main.cpp
Tools/PCAP/PCAP/: PCAP_Block.cpp  PCAP_Block.h  PCAP_EnhancedPacket.cpp  PCAP_EnhancedPacket.h  PCAP_EnhancedPacket_CAN.cpp  PCAP_EnhancedPacket_CAN.h  PCAP_InterfaceDescription.cpp  PCAP_InterfaceDescription.h  PCAP_Option.cpp  PCAP_Option.h  PCAP_OptionEnd.cpp  PCAP_OptionEnd.h  PCAP_OptionList.cpp  PCAP_OptionList.h  PCAP_OptionString.cpp  PCAP_OptionString.h  PCAP_OptionU32.cpp  PCAP_OptionU32.h  PCAP_OptionU64.cpp  PCAP_OptionU64.h  PCAP_SectionHeader.cpp  PCAP_SectionHeader.h
Tools/PCAP/Source/: PCAP_CAN_Exporter.cpp  PCAP_CAN_Exporter.h  PCAP_Exporter.cpp  PCAP_Exporter.h  ProjectInformation.h.in  README.md  Version.h.in  main.cpp
Tools/PEAK/: CHANGES.md  CMakeLists.txt  README.md
Tools/PEAK/Source/: PEAK_CAN_Exporter.cpp  PEAK_CAN_Exporter.h  PEAK_CAN_Exporter_1_1.cpp  PEAK_CAN_Exporter_1_1.h  PEAK_CAN_Exporter_2_1.cpp  PEAK_CAN_Exporter_2_1.h  PEAK_Exporter.cpp  PEAK_Exporter.h  PEAK_TraceFormat.cpp  PEAK_TraceFormat.h  ProjectInformation.h.in  Version.h.in  main.cpp
Tools/Resources/: AppImage.cmake  AppImage.desktop.in  icon.rc
Tools/Shared/: CMakeLists.txt  README.md
Tools/Shared/Include/: CommonOptions.h  ConverterInterface.h  ExecutableEntryPoint.h  GenericRecordExporter.h  ParseOptionStatus.h  ParsedFileInfo.h  PasswordStorage.h  ProgressIndicator.h  TimeConverter.h
Tools/Shared/Source/: ConverterInterface.cpp  ExecutableEntryPoint.cpp  ExecutableInterface.cpp  ExecutableInterface.h  ParseOptionStatus.cpp  ParsedFileInfo.cpp  PasswordStorage.cpp  ProgressIndicator.cpp  ProjectInformation.h.in  StatusCode.cpp  StatusCode.h  TimeConverter.cpp  VersionInformation.h.in
Tools/SocketCAN/: CMakeLists.txt  ProjectInformation.h.in  SocketCAN_CAN_Exporter.cpp  SocketCAN_CAN_Exporter.h  SocketCAN_Exporter.cpp  SocketCAN_Exporter.h  SocketCAN_LIN_Exporter.cpp  SocketCAN_LIN_Exporter.h  main.cpp
Tools/SocketCAN/Source/: ProjectInformation.h.in  SocketCAN_CAN_Exporter.cpp  SocketCAN_CAN_Exporter.h  (+6 more)
Tools/SystemTests/: .gitignore  README.md  config.json  conftest.py  log.txt  log2.txt  pytest.ini
Tools/Tool/: CMakeLists.txt  MDFTool.cpp  MDFTool.h  ProjectInformation.h.in  main.cpp
(+283 files in other folders)
